test/fails/bad_types/bad_add1.lgl
int x = 5;
bool b = true;
print x + b;